...
    <string name="productID">Id: </string>
    <string name="producerID">Erzeuger Id: </string>
    <string name="productPrice">Preis:  </string>
    <string name="productType">Typ: </string>
    <string name="productTaskException">GetProductTask.onPostExecute exception</string>
    <string name="id">id</string>
    <string name="missingPW_Email">Bitte Email und Passwort eingeben!</string>
    <string name="query">query</string>
    <string name="missingEmail">Bitte E-Mail eingeben!</string>
    <string name="missingPW">Bitte Passwort eingeben!</string>
    <string name="openUserContent">LOGIN USER CONTENT ÖFFNEN</string>
    <string name="euro">€</string>
    <string name="slash">/</string>
...
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="exception">exception</string>
    <string name="unsuccessful">unsuccessful</string>
    <string name="falseStatement">false\n</string>
    <string name="loggedUserId">logged_user_id</string>
    <string name="falsePwandEmail">Invalid email or password</string>
    <string name="oops">OOPs! Something went wrong. Connection Problem.</string>
    <string name="YAY">YAY</string>
    <string name="test">test</string>
    <string name="enter">\\n</string>
    <string name="mailto">mailto:</string>
    <string name="linkRegister">http://sw-ma-xp3.bplaced.net/MySQLadmin/register.php</string>
...
